# zlisp

./: .clang-format  CMakeLists.txt  main.c
include/: char_utils.h  check.h  context.h  lexer.h  linear_queue.h  list.h  list_abandon.h  logger.h  mem_utils.h  reader.h  status.h  stream.h  string_utils.h  symbol.h  tables.h  typed_pointer.h  unit_test.h  vector.h
src/: char_utils.c  lexer.c  linear_queue.c  list.c  list_abandon.c  logger.c  parser.c  reader.c  tables.c
tests/: unit_test.c
